--- a/index.html
+++ b/index.html
@@ -1,44 +1,75 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	</head>
-	<body>
-		<section id="header">
-			
-		</section>
-		<section id="slider">
-			
-		</section>
-		<section id="startup">
-			
-		</section>
-		<section id="clients">
-			
-		</section>
-		<section id="features">
-			
-		</section>
-		<section id="pricing">
-			
-		</section>
-		<section id="team">
-			
-		</section>
-		<section id="onemonthfree">
-			
-		</section>
-		<section id="slider">
-			
-		</section>
-		<section id="footer">
-			
-		</section>
-		
-		tion>
-		
-	</body>
+
+<head>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+
+	<section id="header">
+		<div class="container-fluid topSection">
+			<div class="container">
+				<h1 class="pull-left">Premium Business Template</h1>
+				<div class="contact pull-right">
+				<ul class="list-unstyled list-inline">
+					<li><i class="fa fa-mobile"></i>
+						<span>8877-8564-222</span></li>
+					<li><i class="fa fa-envelope-o"></i>
+						<span>info@business.com</span></li>
+				</ul>
+				</div>
+			</div>
+		</div>
+		<div class="container-fluid menu">
+			<div class="container">
+				<a href="index.html"><img src="images/logo.png"</a>
+				<ul class="list-unstyled list-inline pull-right">
+					<li><a href="home.html" class="active">Home</a></li>
+					<li><a href="aboutus.html">About us</a></li>
+					<li><a href="news.html">News</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="service.html">Service</a></li>
+					<li><a href="blog.html">Blog</a></li>
+					<li><a href="pages.html">Pages
+					<i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
+					<button class="btn">CONTACT US</button>
+				</ul>
+			</div>
+		</div>
+	</section>
+	<section id="slider">
+
+	</section>
+	<section id="startup">
+
+	</section>
+	<section id="clients">
+
+	</section>
+	<section id="features">
+
+	</section>
+	<section id="pricing">
+
+	</section>
+	<section id="team">
+
+	</section>
+	<section id="onemonthfree">
+
+	</section>
+	<section id="slider">
+
+	</section>
+	<section id="footer">
+
+	</section>
+
+</body>
+
 </html>
