Changed size of menu(in header)

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div class="container">
 				<a href="index.html"><img src="images/logo.png"</a>
 				<ul class="list-unstyled list-inline pull-right">
-					<li><a href="home.html" class="active">Home</a></li>
+					<li><a href="index.html" class="active">Home</a></li>
 					<li><a href="aboutus.html">About us</a></li>
 					<li><a href="news.html">News</a></li>
 					<li><a href="portfolio.html">Portfolio</a></li>
