--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -43,7 +44,17 @@
 		</div>
 	</section>
 	<section id="slider">
-
+		<div class="container-fluid">
+			<div class="container">
+				<h1>Boost up your local business</h1>
+				<p>Lorem ipsum is simply dummy text of the printing typesetting</p>
+				<ul class="list-unstyled list-inline">
+					<li><a href="#"><i class="fa fa-circle-o"></i></a></li>
+					<li><a href="#"><i class="fa fa-circle-o"></i></a></li>
+					<li><a href="#"><i class="fa fa-circle-o active"></i></a></li>
+				</ul>
+			</div>
+		</div>
 	</section>
 	<section id="startup">
 
