startup left side ready; right not

--- a/index.html
+++ b/index.html
@@ -57,7 +57,35 @@
 		</div>
 	</section>
 	<section id="startup">
-
+		<div class="container-fluid">
+			<div class="container">
+				<div class="col-md-7">
+					<h1>Make your startup</h1>
+					<h3>Dream a reality</h3>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets.</p>
+					
+					<div></div>
+				</div>
+				<div class="col-md-5">
+					<div class="item1">
+						<i class="fa fa-headphones" aria-hidden="true"></i>
+						<h3>Boost your Business</h3>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+					</div>
+					<div class="item2">
+						<i class="fa fa-headphones" aria-hidden="true"></i>
+						<h3>Filtering Business data</h3>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+					</div>
+					<div class="item3">
+						<i class="fa fa-headphones" aria-hidden="true"></i>
+						<h3>Business Solutions</h3>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+					</div>
+					
+				</div>
+			</div>
+		</div>
 	</section>
 	<section id="clients">
 
