Clients ready, added mixins

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
@@ -68,9 +68,9 @@
 				</div>
 				<div class="col-md-5">
 					<div class="item1">
-						<i class="fa fa-headphones" aria-hidden="true"></i>
-						<h3>Boost your Business</h3>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
+							<i class="fa fa-headphones" aria-hidden="true"></i>
+							<h3>Boost your Business</h3>
+							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
 					</div>
 					<div class="item2">
 						<i class="fa fa-headphones" aria-hidden="true"></i>
@@ -88,7 +88,48 @@
 		</div>
 	</section>
 	<section id="clients">
+		<div class="container-fluid">
+			<div class="container">
+				<div class="col-md-12">
+					<h1>Clients</h1>
+					<h3>Customers says about us</h3>
+				</div>
+				<div class="col-md-1">
+					<img src="images/quote-icon.png">
+				</div>
+				<div class="col-md-6">
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries..</p>
+					<span>By<span>GEORGE DANIAL</span></span>
+				</div>
+				<div class="col-md-5">
+					<div class="col-md-12">
+						<div class="col-md-4">
+							<div class="clientPhoto active">
 
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="clientPhoto">
+
+							</div>
+							<ul class="list-unstyled list-inline">
+							<li><a href="#"><i class="fa fa-circle active"></i></a></li>
+							<li><a href="#"><i class="fa fa-circle"></i></a></li>
+							<li><a href="#"><i class="fa fa-circle"></i></a></li>
+						</ul>
+						</div>
+						<div class="col-md-4">
+							<div class="clientPhoto">
+
+							</div>
+						</div>
+					</div>
+					<div class="col-md-12">
+						
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 	<section id="features">
 
