Features ready, added button mixin

--- a/index.html
+++ b/index.html
@@ -132,10 +132,67 @@
 		</div>
 	</section>
 	<section id="features">
-
+		<div class="container-fluid">
+			<div class="container">
+				<div class="col-md-12">
+					<h1>Features</h1>
+					<h3>Some of our features</h3>
+				</div>
+				<div class="col-md-12">
+						<div class="col-md-1">
+							<i class="fa fa-database" aria-hidden="true"></i>
+						</div>
+						<div class="col-md-3">
+							<h3>Data Entry</h3>
+							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+						</div>
+						<div class="col-md-1">
+							<i class="fa fa-plane" aria-hidden="true"></i>
+						</div>
+						<div class="col-md-3">
+							<h3>Client Management</h3>
+							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+						</div>
+					<div class="item">
+							<i class="fa fa-connectdevelop" aria-hidden="true"></i>
+						</div>
+						<div class="col-md-3">
+							<h3>Better Communication</h3>
+							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+						</div>
+				</div>
+				<div class="col-md-12">
+					<div class="col-md-1">
+						<i class="fa fa-slideshare" aria-hidden="true"></i>
+					</div>
+					<div class="col-md-3">
+						<h3>Well analyzing team</h3>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+					</div>
+					<div class="col-md-1">
+						<i class="fa fa-life-ring" aria-hidden="true"></i>
+					</div>
+					<div class="col-md-3">
+						<h3>24 hour support</h3>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+					</div>
+					<div class="col-md-1">
+						<i class="fa fa-television" aria-hidden="true"></i>
+					</div>
+					<div class="col-md-3">
+						<h3>Keeping business data</h3>
+						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
+					</div>
+				</div>
+				<div class="col-md-12">
+					<button class="btn center-block">MORE FEATURES</button>
+				</div>
+				
+			</div>
+		</div>
 	</section>
 	<section id="pricing">
-
+		sdfsfs
 	</section>
 	<section id="team">
 
