Price plans ready

--- a/index.html
+++ b/index.html
@@ -192,7 +192,91 @@
 		</div>
 	</section>
 	<section id="pricing">
-		sdfsfs
+		<div class="container-fluid">
+			<div class="container">
+				<div class="col-md-12">
+					<h1>Pricing</h1>
+					<h3>Some of our prices</h3>
+				</div>
+				<div class="col-md-12">
+					<div class="col-md-3 text-center">
+						<div class="plan">
+							<div class="planName">
+								<h1>Personal</h1>
+							</div>
+							<div class="planPrice">
+								<p>From <span>$100</span> per month</p>
+							</div>
+							<div class="planDetails">
+								<ul class="list-unstyled">
+									<li>Business Support</li>
+									<li>Business Analysing</li>
+									<li>24 hour support</li>
+								</ul>
+							</div>
+							<button class="btn">START NOW</button>
+						</div>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="plan recommended">
+							<img src="images/MergedLayers.png">
+							<div class="planName">
+								<h1>Business</h1>
+							</div>
+							<div class="planPrice">
+								<p>From <span>$200</span> per month</p>
+							</div>
+							<div class="planDetails">
+								<ul class="list-unstyled">
+									<li>Business Support</li>
+									<li>Business Analysing</li>
+									<li>24 hour support</li>
+									<li>Client management</li>
+								</ul>
+							</div>
+							<button class="btn">START NOW</button>
+						</div>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="plan">
+							<div class="planName">
+								<h1>Gold</h1>
+							</div>
+							<div class="planPrice">
+								<p>From <span>$250</span> per month</p>
+							</div>
+							<div class="planDetails">
+								<ul class="list-unstyled">
+									<li>24 hour support</li>
+									<li>Client management</li>
+									<li>Keeping business data</li>
+								</ul>
+							</div>
+							<button class="btn">START NOW</button>
+						</div>
+					</div>
+					<div class="col-md-3 text-center">
+						<div class="plan">
+							<div class="planName">
+								<h1>Ultimate</h1>
+							</div>
+							<div class="planPrice">
+								<p>From <span>$300</span> per month</p>
+							</div>
+							<div class="planDetails">
+								<ul class="list-unstyled">
+									<li>24 hour support</li>
+									<li>Client management</li>
+									<li>Keeping business data</li>
+									<li>Better Communication</li>
+								</ul>
+							</div>
+							<button class="btn">START NOW</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 	<section id="team">
 
