--- a/index.html
+++ b/index.html
@@ -279,7 +279,72 @@
 		</div>
 	</section>
 	<section id="team">
-
+		<div class="container-fluid">
+			<div class="container">
+				<div class="col-md-12">
+					<h1>Team</h1>
+					<h3>Meet our team</h3>
+				</div>
+				<div class="col-md-12">
+					<div class="col-md-3">
+						<div class="member">
+							<div class="imgContainer"><img src="images/image.png"></div>
+							<div class="content">
+								<h4>Mr. Ramgopalavarma</h4>
+								<p>Data Specialist</p>
+								<ul class="list-unstyled list-inline">
+									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+									<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="member">
+							<div class="imgContainer"><img src="images/image.png"></div>
+							<div class="content">
+								<h4>Madhavikutti Menon</h4>
+								<p>Client Support</p>
+								<ul class="list-unstyled list-inline">
+									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+									<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="member">
+							<div class="imgContainer"><img src="images/image.png"></div>
+							<div class="content">
+								<h4>Dr.Venkittaraman</h4>
+								<p>Client Management</p>
+								<ul class="list-unstyled list-inline">
+									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+									<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-3">
+						<div class="member">
+							<div class="imgContainer"><img src="images/image.png"></div>
+							<div class="content">
+								<h4>George Danial</h4>
+								<p>Communication</p>
+								<ul class="list-unstyled list-inline">
+									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
+									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+									<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 	<section id="onemonthfree">
 
