One Month Free Service ready

--- a/index.html
+++ b/index.html
@@ -347,7 +347,18 @@
 		</div>
 	</section>
 	<section id="onemonthfree">
-
+		<div class="container-fluid">
+			<div class="container">
+				<div class="col-md-12 text-center">
+					<h1>One Month <span style="color:#f69b37;">Free</span> Service</h1>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+					<ul class="list-unstyled list-inline">
+						<li><button class="btn">Sign up</button></li>
+						<li><button class="btn">Contact us</button></li>
+					</ul>
+				</div>
+			</div>
+		</div>
 	</section>
 	<section id="slider">
 
