Gonna change the whole structure, backup commit

--- a/index.html
+++ b/index.html
@@ -15,14 +15,18 @@
 	<section id="header">
 		<div class="container-fluid topSection">
 			<div class="container">
-				<h1 class="pull-left">Premium Business Template</h1>
-				<div class="contact pull-right">
+				<div class="col-md-12">
+					<div class="col-md-7">
+						<h1>Premium Business Template</h1>
+					</div>
+				<div class="col-md-5 pull-right">
 					<ul class="list-unstyled list-inline">
 						<li><i class="fa fa-mobile"></i>
 							<span>8877-8564-222</span></li>
 						<li><i class="fa fa-envelope-o"></i>
 							<span>info@business.com</span></li>
 					</ul>
+				</div>
 				</div>
 			</div>
 		</div>
