Added photos to homepage,modified header&slider structure,contact Page ready

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
 
 	<section id="header">
-		<div class="container-fluid topSection">
+		<div class="row topSection">
 			<div class="container">
 				<div class="col-md-12">
-					<div class="col-md-7">
+					<div class="col-md-4 pull-left">
 						<h1>Premium Business Template</h1>
 					</div>
 				<div class="col-md-5 pull-right">
@@ -42,7 +42,7 @@
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="pages.html">Pages
 					<i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
-						<button class="btn">CONTACT US</button>
+						<a href="contact.html"><button class="btn">CONTACT US</button></a>
 					</ul>
 			</div>
 		</div>
@@ -68,21 +68,21 @@
 					<h3>Dream a reality</h3>
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets.</p>
 
-					<div></div>
+					<img src="images/startup.jpg">
 				</div>
 				<div class="col-md-5">
-					<div class="item1">
-						<i class="fa fa-headphones" aria-hidden="true"></i>
+					<div class="row">
+						<i class="fa fa-rocket" aria-hidden="true"></i>
 						<h3>Boost your Business</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
 					</div>
-					<div class="item2">
-						<i class="fa fa-headphones" aria-hidden="true"></i>
+					<div class="row">
+						<i class="fa fa-database" aria-hidden="true"></i>
 						<h3>Filtering Business data</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
-					<div class="item3">
-						<i class="fa fa-headphones" aria-hidden="true"></i>
+					<div class="row">
+						<i class="fa fa-bookmark-o" aria-hidden="true"></i>
 						<h3>Business Solutions</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard.</p>
 					</div>
@@ -108,12 +108,12 @@
 				<div class="col-md-5">
 					<div class="col-md-12">
 						<div class="col-md-4">
-							<div class="clientPhoto active">
+							<div class="clientPhoto client1">
 
 							</div>
 						</div>
 						<div class="col-md-4">
-							<div class="clientPhoto">
+							<div class="clientPhoto client2">
 
 							</div>
 							<ul class="list-unstyled list-inline">
@@ -123,7 +123,7 @@
 							</ul>
 						</div>
 						<div class="col-md-4">
-							<div class="clientPhoto">
+							<div class="clientPhoto client3">
 
 							</div>
 						</div>
@@ -157,7 +157,7 @@
 						<h3>Client Management</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
-					<div class="item">
+					<div class="col-md-1">
 						<i class="fa fa-connectdevelop" aria-hidden="true"></i>
 					</div>
 					<div class="col-md-3">
