--- a/newsDetails.html
+++ b/newsDetails.html
@@ -47,64 +47,46 @@
 			</div>
 		</div>
 	</section>
-	<section>
+
+	<section id="newsDetails">
 		<div class="row pageHeader">
-			<h1>Boost up your local business</h1>
-			<h3>Lorem ipsum is simply dummy text of the printing typesetting</h3>
+				<h1>News details</h1>
+				<h3>Lorem ipsum is simply dummy text</h3>
+			</div>
+		<div class="container">
+			<div class="row">
+				<h1>News</h1>
+				<h3>Featured news</h3>
+			</div>
+			<div class="row newsImage">
+
+			</div>
+			<div class="row newsContent">
+				<span>17</span>
+				<span>Aug 2015</span>
+				<h4>News Heading Here</h4>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+				<ul class="list-unstyled list-inline">
+					<li><button class="btn">PREVIOUS</button></li>
+					<li><button class="btn">NEXT</button></li>
+				</ul>
+			</div>
 		</div>
 	</section>
-	<section id="pageContact">
+	<section id="onemonthfree">
 		<div class="container-fluid">
-			<div class="container map">
-				<div class="row">
-					<h1>Our Location</h1>
-					<h3>Map Here</h3>
-				</div>
-				<div class="row map">
-					<a href="#"><i class="fa fa-map-marker"></i></a>
-				</div>
-				<div class="row details">
-					<div class="col-md-4">
-						<i class="fa fa-mobile"></i>
-						<p>Personal : +8799 879 7980</p>
-						<p>Office : 0477 224 55 22</p>
-					</div>
-					<div class="col-md-4">
-						<i class="fa fa-map-marker"></i>
-						<p>lipsum street nager</p>
-						<p>hoysala street banglure 0900</p>
-						<p>second flor</p>
-					</div>
-					<div class="col-md-4">
-						<i class="fa fa-envelope"></i>
-						<p>info@businesssolution.com</p>
-						<p>info@support.com</p>
-					</div>
-				</div>
-			</div>
-			<div class="container form">
-				<div class="row">
-					<h1>Contact Form</h1>
-				</div>
-				<div class="row">
-					<div class="col-md-6">
-						<input type="text" placeholder="Name">
-					</div>
-					<div class="col-md-6">
-						<input type="text" placeholder="Email">
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-6">
-						<input type="text" placeholder="Phone">
-					</div>
-					<div class="col-md-6">
-						<input type="text" placeholder="Website">
-					</div>
-				</div>
-				<div class="row">
-					<input type="text" placeholder="Comment">
-					<button class="btn center-block">SUBMIT</button>
+			<div class="container">
+				<div class="col-md-12 text-center">
+					<h1>One Month <span style="color:#f69b37;">Free</span> Service</h1>
+					<p>Lorem Ipsum is simply dummy text of the printing and typesetting.</p>
+					<ul class="list-unstyled list-inline">
+						<li>
+							<button class="btn">Sign up</button>
+						</li>
+						<li>
+							<button class="btn">Contact us</button>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
