--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
 					<h1>Our Projects</h1>
 					<h3>Featured works</h3>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3" style="padding-left:0">
 					<div class="portfolioItem" style="height:261px;">
 						<div class="innerPortItem">
 							<h4>Project Title</h4>
@@ -134,7 +134,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3" style="padding-right:0">
 					<div class="portfolioItem" style="height:327px;">
 						<div class="innerPortItem">
 							<h4>Project Title</h4>
