index2 partially ready

--- a/blogpost.html
+++ b/blogpost.html
@@ -174,7 +174,7 @@
 					</div>
 				</div>
 				<div class="row comment">
-					<div class="col-md-1 col-md-offset-1">
+					<div class="col-md-1 col-md-offset-1" style="padding-left:15px;">
 						<div class="commentImg">
 						</div>
 					</div>
