index is responsive

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
 
 	<section id="header">
-		<div class="row topSection">
+		<div class="container-fluid topSection">
 			<div class="container">
 				<div class="col-md-12">
-					<div class="col-md-4 pull-left">
-						<h1>Premium Business Template</h1>
+					<div class="col-md-4">
+						<h1 class="pull-left">Premium Business Template</h1>
 					</div>
-				<div class="col-md-5 pull-right">
-					<ul class="list-unstyled list-inline">
+				<div class="col-md-5 col-md-offset-3">
+					<ul class="list-unstyled list-inline pull-right">
 						<li><i class="fa fa-mobile"></i>
 							<span>8877-8564-222</span></li>
 						<li><i class="fa fa-envelope-o"></i>
@@ -42,7 +42,7 @@
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="pages.html">Pages
 					<i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
-						<a href="contact.html"><button class="btn">CONTACT US</button></a>
+						<li><a href="blog.html">Contact</a></li>
 					</ul>
 			</div>
 		</div>
@@ -61,6 +61,7 @@
 			</div>
 		</div>
 	</section>
+	
 	<section id="startup">
 		<div class="container-fluid">
 			<div class="container">
@@ -99,21 +100,21 @@
 					<h1>Clients</h1>
 					<h3>Customers says about us</h3>
 				</div>
-				<div class="col-md-1">
+				<div class="col-md-1 col-xs-2">
 					<img src="images/quote-icon.png">
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-6 col-xs-10">
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries..</p>
 					<span>By<span>GEORGE DANIAL</span></span>
 				</div>
 				<div class="col-md-5">
-					<div class="col-md-12">
-						<div class="col-md-4">
+					<div class="col-md-12 clientPhotos">
+						<div class="col-md-4 col-xs-4">
 							<div class="clientPhoto client1">
 
 							</div>
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-4 col-xs-4">
 							<div class="clientPhoto client2">
 
 							</div>
@@ -123,7 +124,7 @@
 								<li><a href="#"><i class="fa fa-circle"></i></a></li>
 							</ul>
 						</div>
-						<div class="col-md-4">
+						<div class="col-md-4 col-xs-4">
 							<div class="clientPhoto client3">
 
 							</div>
@@ -144,47 +145,47 @@
 					<h3>Some of our features</h3>
 				</div>
 				<div class="col-md-12">
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-database" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>Data Entry</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-plane" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>Client Management</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-connectdevelop" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>Better Communication</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
 				</div>
 				<div class="col-md-12">
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-slideshare" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>Well analyzing team</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-life-ring" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>24 hour support</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-television" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>Keeping business data</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
