about is responsive

--- a/about.html
+++ b/about.html
@@ -78,27 +78,27 @@
 		<div class="container-fluid" style="background-color:white;">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-2">
 					<i class="fa fa-phone"></i>
 				</div>
-				<div class="col-md-2">
+				<div class="col-md-2 col-xs-10">
 					<p class="statNumber">10</p>
 					<p class="statText">Years in marketing</p>
 				</div>
-				<div class="col-md-1">
+				<div class="col-md-1 col-xs-2">
 					<i class="fa fa-users"></i>
 				</div>
-				<div class="col-md-2"><p class="statNumber">18</p>
+				<div class="col-md-2 col-xs-10"><p class="statNumber">18</p>
 					<p class="statText">Team members</p></div>
-				<div class="col-md-1">
+				<div class="col-md-1 col-xs-2">
 					<i class="fa fa-star-o"></i>
 				</div>
-				<div class="col-md-2"><p class="statNumber">900+</p>
+				<div class="col-md-2 col-xs-10"><p class="statNumber">900+</p>
 					<p class="statText">Finished projects</p></div>
-				<div class="col-md-1">
+				<div class="col-md-1 col-xs-2">
 					<i class="fa fa-trophy"></i>
 				</div>
-				<div class="col-md-2"><p class="statNumber">22</p>
+				<div class="col-md-2 col-xs-10"><p class="statNumber">22</p>
 					<p class="statText">Certification</p></div>
 				
 				</div>
@@ -183,44 +183,44 @@
 					<h3>Some of our features</h3>
 				</div>
 				<div class="col-md-12">
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-database" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>Data Entry</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-plane" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>Client Management</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-connectdevelop" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>Better Communication</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
 				</div>
 				<div class="col-md-12">
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-slideshare" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>Well analyzing team</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-life-ring" aria-hidden="true"></i>
 					</div>
-					<div class="col-md-3">
+					<div class="col-md-3 col-xs-9">
 						<h3>24 hour support</h3>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been.</p>
 					</div>
-					<div class="col-md-1">
+					<div class="col-md-1 col-xs-3">
 						<i class="fa fa-television" aria-hidden="true"></i>
 					</div>
 					<div class="col-md-3">
