--- a/blogpost.html
+++ b/blogpost.html
@@ -42,7 +42,7 @@
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="pages.html">Pages
 					<i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
-						<button class="btn">CONTACT US</button>
+						<li><a href="blog.html">Contact Us</a></li>
 					</ul>
 			</div>
 		</div>
@@ -85,7 +85,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-3">
+				<div class="col-md-3 col-xs-12">
 					<div class="search">
 						<input type="text" placeholder="Search now..">
 						<a href="#"><i class="fa fa-search"></i></a>
@@ -131,18 +131,6 @@
 							</div>
 						</div>
 					</div>
-				<!--	<div class="tags">
-						<h4>Tags</h4>
-						<div class="row">
-							<div class="col-md-4"><h5>Business</h5></div>
-							<div class="col-md-4"><h5>Idea</h5></div>
-							<div class="col-md-4"><h5>Lipsum</h5></div>
-						</div>
-						<div class="row">
-							<div class="col-md-6"><h5>Featured Posts</h5></div>
-							<div class="col-md-6"><h5>Blog Post</h5></div>
-						</div>
-					</div>-->
 				</div>
 			</div>
 			<div class="container comments">
