--- a/index2.html
+++ b/index2.html
@@ -37,7 +37,7 @@
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="pages.html">Pages
 					<i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
-						<a href="contact.html"><button class="btn">CONTACT US</button></a>
+						<li><a href="blog.html">Contact Us</a></li>
 					</ul>
 			</div>
 		</div>
