--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="pages.html">Pages
 					<i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
-						<button class="btn">CONTACT US</button>
+						<li><a href="blog.html">Contact Us</a></li>
 					</ul>
 			</div>
 		</div>
@@ -99,7 +99,7 @@
 					</div>
 					<div class="blogPost">
 						<div>
-							<video width="828px" height="334px" controls>
+							<video width="100%" height="334px" controls>
 							<source src="videos/youtube.mp4" type="video/mp4">
 							<source src="videos/youtube.ogg" type="video/ogg">
 							Your browser does not support the video tag.
@@ -115,7 +115,7 @@
 					</div>
 					<div class="blogPost">
 						<div>
-							<audio controls>
+							<audio width="100%" controls>
 							<source src="videos/youtube.mp4" type="video/mp4">
 							<source src="videos/youtube.ogg" type="video/ogg">
 							Your browser does not support the video tag.
@@ -184,18 +184,6 @@
 							</div>
 						</div>
 					</div>
-				<!--	<div class="tags">
-						<h4>Tags</h4>
-						<div class="row">
-							<div class="col-md-4"><h5>Business</h5></div>
-							<div class="col-md-4"><h5>Idea</h5></div>
-							<div class="col-md-4"><h5>Lipsum</h5></div>
-						</div>
-						<div class="row">
-							<div class="col-md-6"><h5>Featured Posts</h5></div>
-							<div class="col-md-6"><h5>Blog Post</h5></div>
-						</div>
-					</div>-->
 				</div>
 			</div>
 		</div>
