--- a/newsDetails.html
+++ b/newsDetails.html
@@ -42,7 +42,7 @@
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="pages.html">Pages
 					<i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
-						<button class="btn">CONTACT US</button>
+						<li><a href="blog.html">Contact Us</a></li>
 					</ul>
 			</div>
 		</div>
