--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
 	</section>
 	<section>
 		<div class="row pageHeader">
-			<h1>Boost up your local business</h1>
+			<h1>Contact Us</h1>
 			<h3>Lorem ipsum is simply dummy text of the printing typesetting</h3>
 		</div>
 	</section>
